# my-tauri-app

./: .gitignore  odfiz.keystore  package-lock.json  package.json
.github/workflows/: build.yml  main.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
