[package]
name = "cskru"
version = "0.0.0"
description = "Cakru App"
authors = []
edition = "2021"

[lib]
name = "odfiz_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
